sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: type mismatch;
 found   : Int
 required: Null
    v = getValeur(i)
                 ^AlgInsertionSort:9: error: overloaded method value > with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (Null)
    for (j <- i-1 to 0 by -1) {if (getValeur(j) > v) {copie(j,i);k = j}
                                                ^AlgInsertionSort:11: error: an expression of type Null is ineligible for implicit conversion
   setValeur(k,v)
               ^AlgInsertionSort:11: error: type mismatch;
 found   : Null
 required: Int
   setValeur(k,v)
               ^