sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  val n = getNombreValeurs()
  var v = null
  var k = 0
  for (i<- 1 to n-1) {
    k = i
    v = getValeur(i)
    for (j <- i-1 to 0 by -1) {if (getValeur(j) > v) {copie(j,i);k = j}
  }
   setValeur(k,v)
  }}